--- a/Twitter_Tweepy_Data_Extraction.ipynb
+++ b/Twitter_Tweepy_Data_Extraction.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TWITTER ANALYSIS - MENTORSHIP PROJECT\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 1. CONFIGURATION: ESTABLISHING CONNECTION TO THE API\n",
+    "*Using Tweepy*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,22 +70,34 @@
    ],
    "source": [
     "#Authenticate our account with the Twitter API\n",
-    "# def authenticate():\n",
-    "\n",
     "auth    = tweepy.OAuthHandler(api_key, api_key_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
     "api     = tweepy.API(auth)\n",
     "\n",
     "# You can authenticate as your app with just your bearer token\n",
     "client  = tweepy.Client(bearer_token=bearer_token)\n",
+    "\n",
     "# If the authentication was successful, this should print the\n",
     "# screen name / username of the account\n",
     "print(api.verify_credentials().screen_name)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### STEP 2. DATA EXTRACTION\n",
+    "####  2.1. Defining a tweet fetching function using Tweepy\n",
+    "\n",
+    "**__Pagination:__** Pagination is a feature in Twitter API v2 endpoints that return more results than can be returned in a single response. When that happens, the data is returned in a series of 'pages'. Pagination refers to methods for programatically requesting all of the pages, in order to retrieve the entire result data set. Not all API endpoints support or require pagination, but it is often used when result sets are large.\n",
+    "\n",
+    "**Paginator** can be used to paginate for any Client methods that support pagination"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +126,34 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  2.2. Extracting Domains and Entities from the Twitter API\n",
+    "*Annotations have been added to the Tweet object from all v2 endpoints that return a Tweet object. Tweet annotations offer a way to understand contextual information about the Tweet itself. Though 100% of Tweets are reviewed, due to the contents of Tweet text, only a portion are annotated.*\n",
+    "\n",
+    "##### Tweet annotation types\n",
+    "**Entities** Entity annotations are programmatically defined entities that are nested within the entities field and are reflected as annotations in the payload. Each annotation has a confidence score and an indication of where in the Tweet text the entities were identified (start and end fields).\n",
+    "\n",
+    "The entity annotations can have the following types:\n",
+    "\n",
+    "1. Person - Barack Obama, Daniel, or George W. Bush\n",
+    "2. Place - Detroit, Cali, or \"San Francisco, California\"\n",
+    "3. Product - Mountain Dew, Mozilla Firefox\n",
+    "4. Organization - Chicago White Sox, IBM\n",
+    "5. Other - Diabetes, Super Bowl 50\n",
+    "\n",
+    "**Context annotations** are delivered as a context_annotations field in the payload. These annotations are inferred based on semantic analysis (keywords, hashtags, handles, etc) of the Tweet text and result in domain and/or entity labels. Context annotations can yield one or many domains. At present, we’re using a list of 80+ domains reflected in the table below.  \n",
+    "1. ID - 45: Brand Vertical\n",
+    "2. ID - 46: Brand Category\n",
+    "3. ID - 47: Brand\n",
+    "4. ID - 48: Product"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,46 +176,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "context:45.781972125171060736 OR context:45.781974597226799105 OR context:45.781974596740190208 OR context:45.781974596161376261 OR context:45.781974597474263040 OR context:45.781974597310615553 OR context:45.781974596157251587 OR context:45.781974596157181954\n"
-     ]
-    }
-   ],
    "source": [
-    "context = domain_filter(df)\n",
-    "print(context)"
+    "##### 2.2.1 DOMAIN-ENTITY QUERY CONSTRUCTION \n",
+    "The *search_recent_tweets* function within the Twitter API has a query limit of 512 characters. To work around this, I have created a list of strings, less than 512 characters long, which contain the domain_id.entity_id search query broken up into chunks of 512 characters or less each which I will iterate through when making API requests to retrieve tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['context:45.781972125171060736 OR context:45.781974597226799105 OR context:45.781974596740190208 OR context:45.781974596161376261 OR context:45.781974597474263040 OR context:45.781974597310615553 OR context:45.781974596157251587']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#DOMAIN 45 : < 1 CHUNK\n",
+    "#DOMAIN 46 : < 5 CHUNK\n",
+    "#DOMAIN 47 : < 240 CHUNK\n",
+    "#DOMAIN 45 : < 61 CHUNK\n",
     "\n",
-    "\n",
-    "context = domain_filter(df)\n",
-    "chunk_size = 400\n",
-    "code    = context\n",
-    "chunks  = []\n",
-    "start   = 0\n",
-    "counter = 0\n",
+    "context     = domain_filter(df)\n",
+    "chunk_size  = 400\n",
+    "code        = context\n",
+    "chunks      = []\n",
+    "start       = 0\n",
+    "counter     = 0\n",
     "while start < len(code) and counter < 1:\n",
     "    end = start + chunk_size\n",
     "    if end >= len(code):\n",
@@ -175,29 +215,36 @@
     "    start = end\n",
     "    counter += 1\n",
     "\n",
-    "print (chunks)"
+    "# print (chunks)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.2 Defining Pre-Extraction Filtering "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_rule(chunk):\n",
     "    hashtag_list    = '(#ad OR #sponsored OR #promoted OR #promotion)'\n",
-    "    lang            = 'lang:en'\n",
-    "    rt              = '-is:retweet' \n",
+    "    lang            = '(lang:en)'\n",
+    "    rt              = '(-is:retweet) (-\"RT\")' \n",
     "    domain          =  chunk\n",
     "    mention         = 'has:mentions'\n",
-    "    # place           = 'place_country:US'\n",
     "    query           = hashtag_list + ' ' + lang + ' ' + rt + ' ' +  mention + ' ' + '(' + domain + ')'\n",
-    "    return query\n"
+    "    return query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,21 +255,19 @@
     "csvWriter   = csv.writer(csvFile)\n",
     "\n",
     "#Create headers for the data you want to save, in this example, we only want save these columns in our dataset\n",
-    "csvWriter.writerow(['author_id', 'created_at', 'tweet_id','text'])\n",
+    "# csvWriter.writerow(['author_id', 'created_at', 'tweet_id','text'])\n",
     "csvFile.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def append_to_csv(data, fileName):\n",
     "\n",
     "    #A counter variable\n",
-    "    counter = 0\n",
-    "\n",
     "    #Open OR create the target CSV file\n",
     "    csvFile = open(fileName, \"a\", newline=\"\", encoding='utf-8')\n",
     "    csvWriter = csv.writer(csvFile)\n",
@@ -248,7 +293,6 @@
     "    # Append the result to the CSV file\n",
     "    csvWriter.writerow(res)\n",
     "    # counter += 1\n",
-    "\n",
     "    # When done, close the CSV file\n",
     "    csvFile.close()\n",
     "\n",
@@ -258,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,20 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chunk: context:45.781972125171060736 OR context:45.781974597226799105 OR context:45.781974596740190208 OR context:45.781974596161376261 OR context:45.781974597474263040 OR context:45.781974597310615553 OR context:45.781974596157251587\n"
+      "Chunk: context:45.781972125171060736 OR context:45.781974597226799105 OR context:45.781974596740190208 OR context:45.781974596161376261 OR context:45.781974597474263040 OR context:45.781974597310615553 OR context:45.781974596157251587\n",
+      "Number of lines pre-extraction:- 4221\n",
+      "Number of lines post-extraction:- 5220\n"
      ]
     }
    ],
    "source": [
     "for chunk in chunks:\n",
     "        print(f'Chunk: {chunk}')\n",
+    "        # read CSV file\n",
+    "        results = pd.read_csv('test.csv')\n",
+    "        # count no. of lines\n",
+    "        print(\"Number of lines pre-extraction:-\", \n",
+    "        len(results))\n",
     "        query       = filter_rule(chunk=chunk)\n",
     "        paginator   = tweepy.Paginator(client.search_recent_tweets, query=query, \n",
     "                                        expansions    = ['author_id','in_reply_to_user_id','geo.place_id','entities.mentions.username','referenced_tweets.id','referenced_tweets.id.author_id'],\n",
@@ -300,8 +351,41 @@
     "                append_to_csv(data, fileName=\"test.csv\")\n",
     "\n",
     "        time.sleep(16)\n",
-    "\n",
+    "        results = pd.read_csv('test.csv')\n",
+    "        # count no. of lines\n",
+    "        print(\"Number of lines post-extraction:-\", \n",
+    "        len(results))\n",
+    " \n",
     "deduplicate(\"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines post-extraction:- 3265\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = pd.read_csv('test.csv')\n",
+    "        # count no. of lines\n",
+    "print(\"Number of lines post-extraction:-\",  len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data.csv\")\n",
+    "df.to_json(r'data.json',orient='records')"
    ]
   },
   {
@@ -361,16 +445,6 @@
     "# df = pd.read_csv(\"data.csv\")       \n",
     "print(\"Total number of results: \", total_tweets)\n",
     "deduplicate(\"test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data.csv\")\n",
-    "df.to_json(r'data.json',orient='records')"
    ]
   },
   {
