Edits to Markdown

--- a/Twitter_Tweepy_Data_Extraction.ipynb
+++ b/Twitter_Tweepy_Data_Extraction.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STEP 2. DATA EXTRACTION\n",
+    "### STEP 2. DATA EXTRACTION & CLEANING\n",
     "####  2.1. Defining a tweet fetching function using Tweepy\n",
     "\n",
     "**__Pagination:__** Pagination is a feature in Twitter API v2 endpoints that return more results than can be returned in a single response. When that happens, the data is returned in a series of 'pages'. Pagination refers to methods for programatically requesting all of the pages, in order to retrieve the entire result data set. Not all API endpoints support or require pagination, but it is often used when result sets are large.\n",
@@ -133,7 +133,7 @@
     "####  2.2. Extracting Domains and Entities from the Twitter API\n",
     "*Annotations have been added to the Tweet object from all v2 endpoints that return a Tweet object. Tweet annotations offer a way to understand contextual information about the Tweet itself. Though 100% of Tweets are reviewed, due to the contents of Tweet text, only a portion are annotated.*\n",
     "\n",
-    "##### Tweet annotation types\n",
+    "##### **Tweet annotation types**\n",
     "**Entities** Entity annotations are programmatically defined entities that are nested within the entities field and are reflected as annotations in the payload. Each annotation has a confidence score and an indication of where in the Tweet text the entities were identified (start and end fields).\n",
     "\n",
     "The entity annotations can have the following types:\n",
@@ -223,7 +223,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.2.2 Defining Pre-Extraction Filtering "
+    "##### 2.2.2 Defining Pre-Extraction Filtering \n",
+    "- [X] Language restricted to English \n",
+    "- [X] No Retweets or Quote Retweets Allowed\n",
+    "- [X] Filtering for tweets within Domains 45 through 48 (*all entities*)\n",
+    "- [X] Tweets must have mentions (*indicates presence of brand/sponsor*)\n",
+    "- [X] Hashtag List consisting of indications that the tweet is being promoted or sponsored\n",
+    "\n",
+    "- [ ] Creating a blacklist of users who are considered spammers\n",
+    "  1. Following to Follower Ratio\n",
+    "  2. Number of Followers\n",
+    "  3. Tweet History of repeated tweets, patterns of hashtags, mentions indicating bots\n",
+    "  4.  Using the Botometer API to extract a score for each user that indicates the probabibily of the account being a bot. \n",
+    "\n"
    ]
   },
   {
@@ -248,14 +260,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "total_tweets = 0\n",
-    "\n",
     "csvFile     = open(\"test.csv\", \"a\", newline=\"\", encoding='utf-8')\n",
     "csvWriter   = csv.writer(csvFile)\n",
     "\n",
     "#Create headers for the data you want to save, in this example, we only want save these columns in our dataset\n",
-    "# csvWriter.writerow(['author_id', 'created_at', 'tweet_id','text'])\n",
+    "csvWriter.writerow(['author_id', 'created_at', 'tweet_id','text'])\n",
     "csvFile.close()\n"
    ]
   },
@@ -267,37 +276,18 @@
    "source": [
     "def append_to_csv(data, fileName):\n",
     "\n",
-    "    #A counter variable\n",
     "    #Open OR create the target CSV file\n",
     "    csvFile = open(fileName, \"a\", newline=\"\", encoding='utf-8')\n",
     "    csvWriter = csv.writer(csvFile)\n",
     "\n",
-    "    #Loop through each tweet\n",
-    "    # for tweet in json_response['data']:\n",
-    "    #     # We will create a variable for each since some of the keys might not exist for some tweets\n",
-    "    #     # So we will account for that\n",
-    "   \n",
-    "    #     # 1. Author ID\n",
-    "    #     author_id = tweet['author_id']\n",
-    "    #     # 2. Time created\n",
-    "    #     created_at = dateutil.parser.parse(tweet['created_at']) \n",
-    "    #     # 3. Tweet ID\n",
-    "    #     tweet_id = tweet['id']\n",
-    "    #     # 4. Tweet text\n",
-    "    #     text = tweet['text']\n",
-    "    #     # Assemble all data in a list\n",
-    "    #     res = [author_id, created_at, tweet_id, text]\n",
-    "        \n",
     "    # Assemble all data in a list\n",
     "    res = [data['author_id'], data['created_at'], data['tweet_id'], data['text']]\n",
+    "    \n",
     "    # Append the result to the CSV file\n",
     "    csvWriter.writerow(res)\n",
-    "    # counter += 1\n",
+    "    \n",
     "    # When done, close the CSV file\n",
-    "    csvFile.close()\n",
-    "\n",
-    "    # Print the number of tweets for this iteration\n",
-    "    # print(\"# of Tweets added from this response: \", counter) "
+    "    csvFile.close()"
    ]
   },
   {
@@ -315,19 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunk: context:45.781972125171060736 OR context:45.781974597226799105 OR context:45.781974596740190208 OR context:45.781974596161376261 OR context:45.781974597474263040 OR context:45.781974597310615553 OR context:45.781974596157251587\n",
-      "Number of lines pre-extraction:- 4221\n",
-      "Number of lines post-extraction:- 5220\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for chunk in chunks:\n",
     "        print(f'Chunk: {chunk}')\n",
@@ -357,25 +337,6 @@
     "        len(results))\n",
     " \n",
     "deduplicate(\"test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of lines post-extraction:- 3265\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = pd.read_csv('test.csv')\n",
-    "        # count no. of lines\n",
-    "print(\"Number of lines post-extraction:-\",  len(results))"
    ]
   },
   {
