Added methodology which I will be using for removing spam and fake/bot accounts. Method includes pre-extract filtering which is partially completed & Post-extract filtering which is to-be completed next using methods explained within Markdown.
Added all fields of interest for the tweet object of the Paginator. This includes
along with the tweet ID, text, author_id, and created timestamp the context annotations
and entities we are interested in. Geo information is still blank. Finding solution.

--- a/Twitter_Tweepy_Data_Extraction.ipynb
+++ b/Twitter_Tweepy_Data_Extraction.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tweets(query, max_results, next_token = None):\n",
+    "def get_tweets(query, max_results):\n",
     "\n",
     "  expansions    = ['author_id','in_reply_to_user_id','geo.place_id','entities.mentions.username','referenced_tweets.id','referenced_tweets.id.author_id']\n",
     "  tweet_fields  = ['id','text','author_id','attachments','context_annotations','created_at','entities','lang','geo','public_metrics']\n",
@@ -109,14 +109,13 @@
     "  place_fields  = ['full_name','id','country','country_code','geo','name','place_type']\n",
     "  try:\n",
     "    # call twitter api to fetch tweets\n",
-    "    fetched_tweets = client.search_recent_tweets(query,\n",
+    "    fetched_tweets = tweepy.Paginator(client.search_recent_tweets, query=query,\n",
     "      expansions        =expansions,\n",
     "      tweet_fields      =tweet_fields,\n",
     "      place_fields      =place_fields,\n",
     "      user_fields       =user_fields,\n",
-    "      next_token        =next_token,\n",
     "      max_results       =max_results\n",
-    "    )\n",
+    "    ).flatten()\n",
     "    \n",
     "    return fetched_tweets\n",
     "    \n",
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,33 +223,39 @@
    "metadata": {},
    "source": [
     "##### 2.2.2 Defining Pre-Extraction Filtering \n",
-    "- [X] Language restricted to English \n",
-    "- [X] No Retweets or Quote Retweets Allowed\n",
-    "- [X] Filtering for tweets within Domains 45 through 48 (*all entities*)\n",
-    "- [X] Tweets must have mentions (*indicates presence of brand/sponsor*)\n",
-    "- [X] Hashtag List consisting of indications that the tweet is being promoted or sponsored\n",
+    "- [ X ] Language restricted to English \n",
+    "- [ X ] No Retweets or Quote Retweets Allowed\n",
+    "- [ X ] Filtering for tweets within Domains 45 through 48 (*all entities*)\n",
+    "- [ X ] Tweets must have mentions (*indicates presence of brand/sponsor*)\n",
+    "- [ X ] Hashtag List consisting of indications that the tweet is being promoted or sponsored\n",
+    "- [ ] Possible Entity Names which are irrelevant\n",
+    "- [ ] Accounts that have a high ratio of followers to following (e.g., following fewer than 100 accounts but having thousands of followers)\n",
+    "- [ ] Number of Followers\n",
     "\n",
-    "- [ ] Creating a blacklist of users who are considered spammers\n",
-    "  1. Following to Follower Ratio\n",
-    "  2. Number of Followers\n",
-    "  3. Tweet History of repeated tweets, patterns of hashtags, mentions indicating bots\n",
-    "  4.  Using the Botometer API to extract a score for each user that indicates the probabibily of the account being a bot. \n",
-    "\n"
+    "##### 2.2.3 Defining Post-Extraction Filtering \n",
+    "  1. Accounts that use a large number of hashtags in their tweets (e.g., more than 5 hashtags per tweet).\n",
+    "  2. Accounts that use a lot of capital letters or exclamation points in their tweets.\n",
+    "  3. Accounts that have a high percentage of tweets that contain links (e.g., more than 50% of tweets contain links).   \n",
+    "  5. Using the Botometer API to extract a score for each user that indicates the probabibily of the account being a bot. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_rule(chunk):\n",
-    "    hashtag_list    = '(#ad OR #sponsored OR #promoted OR #promotion)'\n",
+    "def filter_rule(chunk, hash_include=True):\n",
+    "    text_list    = '(#ad OR #sponsored OR #promoted OR #promotion) (Learn More) (Shop Now)'\n",
     "    lang            = '(lang:en)'\n",
     "    rt              = '(-is:retweet) (-\"RT\")' \n",
     "    domain          =  chunk\n",
     "    mention         = 'has:mentions'\n",
-    "    query           = hashtag_list + ' ' + lang + ' ' + rt + ' ' +  mention + ' ' + '(' + domain + ')'\n",
+    "    if hash_include == True:\n",
+    "        query           = text_list + ' ' + lang + ' ' + rt + ' ' +  mention + ' ' + '(' + domain + ')'\n",
+    "    else: \n",
+    "        query           = text_list + ' ' + lang + ' ' + rt + ' ' +  mention\n",
+    "\n",
     "    return query"
    ]
   },
@@ -260,11 +265,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csvFile     = open(\"test.csv\", \"a\", newline=\"\", encoding='utf-8')\n",
+    "csvFile     = open(\"dev_tweets.csv\", \"a\", newline=\"\", encoding='utf-8')\n",
     "csvWriter   = csv.writer(csvFile)\n",
     "\n",
     "#Create headers for the data you want to save, in this example, we only want save these columns in our dataset\n",
-    "csvWriter.writerow(['author_id', 'created_at', 'tweet_id','text'])\n",
+    "csvWriter.writerow(['author_id', 'created_at', 'tweet_id', 'text', 'geo', 'tweet_metrics', 'context', 'entities', 'promo', 'source'])\n",
     "csvFile.close()\n"
    ]
   },
@@ -281,7 +286,9 @@
     "    csvWriter = csv.writer(csvFile)\n",
     "\n",
     "    # Assemble all data in a list\n",
-    "    res = [data['author_id'], data['created_at'], data['tweet_id'], data['text']]\n",
+    "    res = [data['author_id'], data['created_at'], data['tweet_id'], data['text'],\n",
+    "    data['geo'], data['tweet_metrics'], data['context'], data['entities'], data['promo'], \n",
+    "    data['source']]\n",
     "    \n",
     "    # Append the result to the CSV file\n",
     "    csvWriter.writerow(res)\n",
@@ -292,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,6 +311,75 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TEST CODE\n",
+    "---------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chunk in chunks:\n",
+    "    query       = filter_rule(chunk=chunk)\n",
+    "    paginator   = get_tweets(query=query, max_results=100)\n",
+    "    for tweet in paginator:\n",
+    "    # Assemble all data in a list\n",
+    "        print(f\"author_id :     {tweet.author_id}\")\n",
+    "        print(f\"created_at:     {tweet.created_at}\")\n",
+    "        print(f\"tweet_id:       {tweet.id}\")\n",
+    "        print(f\"text:           {tweet.text}\")\n",
+    "        print(f\"geo:            {tweet.geo}\")\n",
+    "        print(f\"tweet_metrics:  {tweet.public_metrics}\")\n",
+    "        print(f\"context:        {tweet.context_annotations}\")\n",
+    "        print(f\"entites:        {tweet.entities}\")\n",
+    "        print(f\"promo:          {tweet.promoted_metrics}\")\n",
+    "        print(f\"source:         {tweet.source}\")\n",
+    "\n",
+    "#     append_to_csv(data, fileName=\"test.csv\")\n",
+    " # Save data as dictionary\n",
+    "#     tweets_dict = tweets.json() \n",
+    "    \n",
+    "#     tweets_data     = tweets_dict[\"data\"]\n",
+    "#     # tweets_includes = tweets_dict[\"includes\"]\n",
+    "#     tweets_NT       = tweets_dict[\"meta\"][\"next_token\"]\n",
+    "    \n",
+    "# users = tweets_includes[\"users\"]\n",
+    "# users = {user[\"id\"]: user for user in users}\n",
+    "\n",
+    "# for tweet in tweets_data:\n",
+    "#     author_id = int(tweet[\"author_id\"])\n",
+    "#     print(f'USER ID:                    {users[tweet[\"author_id\"]][\"id\"]}')\n",
+    "#     print(f'USER NAME:                  {users[tweet[\"author_id\"]][\"name\"]}')\n",
+    "#     print(f'HANDLE:                     {users[tweet[\"author_id\"]][\"username\"]}')\n",
+    "#     print(f'VERIFIED:                   {users[tweet[\"author_id\"]][\"verified\"]}')\n",
+    "#     print(f'BIO:                        {users[tweet[\"author_id\"]][\"description\"]}')\n",
+    "#     print(f'METRICS:                    {users[tweet[\"author_id\"]][\"public_metrics\"]}')\n",
+    "#     print(f\"TWEET ID:                   {tweet['id']}\") \n",
+    "#     print(f\"TEXT:                       {tweet['text']}\")\n",
+    "#     print(f\"CREATED AT:                 {tweet['created_at']}\")\n",
+    "#     print(f\"TWEET METRICS:              {tweet['public_metrics']}\")\n",
+    "#     context_annotations = tweet.get(\"context_annotations\",[])\n",
+    "#     print(f\"CONTEXT - DOMAIN:           {list(map(itemgetter('domain'), context_annotations))}\")\n",
+    "#     print(f\"CONTEXT - ENTITY:           {list(map(itemgetter('entity'), context_annotations))}\")\n",
+    "#     entities = tweet.get(\"entities\",[])\n",
+    "#     print(f\"ENTITIES:                   {entities}\\n\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -312,26 +388,22 @@
     "for chunk in chunks:\n",
     "        print(f'Chunk: {chunk}')\n",
     "        # read CSV file\n",
-    "        results = pd.read_csv('test.csv')\n",
+    "        results = pd.read_csv('dev_tweets.csv')\n",
     "        # count no. of lines\n",
     "        print(\"Number of lines pre-extraction:-\", \n",
     "        len(results))\n",
     "        query       = filter_rule(chunk=chunk)\n",
-    "        paginator   = tweepy.Paginator(client.search_recent_tweets, query=query, \n",
-    "                                        expansions    = ['author_id','in_reply_to_user_id','geo.place_id','entities.mentions.username','referenced_tweets.id','referenced_tweets.id.author_id'],\n",
-    "                                        tweet_fields  = ['id','text','author_id','attachments','context_annotations','created_at','entities','lang','geo','public_metrics'],\n",
-    "                                        user_fields   = ['id','name','username','created_at','description','entities','location','public_metrics','verified'],\n",
-    "                                        place_fields  = ['full_name','id','country','country_code','geo','name','place_type'], max_results=100).flatten()\n",
+    "        paginator   = get_tweets(query=query, max_results=100)\n",
     "        for tweet in paginator:\n",
     "        # Assemble all data in a list\n",
     "                data = {\"author_id\": tweet.author_id,\n",
     "                        \"created_at\":tweet.created_at,\n",
     "                        \"tweet_id\": tweet.id,\n",
     "                        \"text\": tweet.text}\n",
-    "                append_to_csv(data, fileName=\"test.csv\")\n",
+    "                append_to_csv(data, fileName=\"dev_tweets.csv\")\n",
     "\n",
     "        time.sleep(16)\n",
-    "        results = pd.read_csv('test.csv')\n",
+    "        results = pd.read_csv('dev_tweets.csv')\n",
     "        # count no. of lines\n",
     "        print(\"Number of lines post-extraction:-\", \n",
     "        len(results))\n",
@@ -347,6 +419,15 @@
    "source": [
     "df = pd.read_csv(\"data.csv\")\n",
     "df.to_json(r'data.json',orient='records')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ARCHIVE CODE - MANUAL PAGINATION METHOD BEING SCRAPED\n",
+    "---------------------------------------------------------------------------"
    ]
   },
   {
@@ -407,76 +488,6 @@
     "print(\"Total number of results: \", total_tweets)\n",
     "deduplicate(\"test.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from operator import itemgetter\n",
-    "\n",
-    "tweets          = None\n",
-    "requests_lists  = []\n",
-    "next_token      = None\n",
-    "\n",
-    "tweets  = get_tweets(query=filter_rule(),next_token=next_token,max_results=100)\n",
-    "tweets_dict = tweets.json() \n",
-    "tweets_data = tweets_dict[\"data\"]\n",
-    "tweets_NT   = tweets_dict[\"meta\"]\n",
-    "\n",
-    "# df = pd.DataFrame(tweets_dict['data'])\n",
-    "# #WHILE LOOP UNTIL NEXT_TOKEN IS NULL OR BLANK\n",
-    "# while next_token is not None:\n",
-    "#     tweets  = get_tweets(query=filter_rule(),next_token=next_token,max_results=100)\n",
-    "\n",
-    "#     # Save data as dictionary\n",
-    "#     tweets_dict = tweets.json() \n",
-    "    \n",
-    "#     tweets_data     = tweets_dict[\"data\"]\n",
-    "#     # tweets_includes = tweets_dict[\"includes\"]\n",
-    "#     tweets_NT       = tweets_dict[\"meta\"][\"next_token\"]\n",
-    "    \n",
-    "# users = tweets_includes[\"users\"]\n",
-    "# users = {user[\"id\"]: user for user in users}\n",
-    "\n",
-    "# for tweet in tweets_data:\n",
-    "#     author_id = int(tweet[\"author_id\"])\n",
-    "#     print(f'USER ID:                    {users[tweet[\"author_id\"]][\"id\"]}')\n",
-    "#     print(f'USER NAME:                  {users[tweet[\"author_id\"]][\"name\"]}')\n",
-    "#     print(f'HANDLE:                     {users[tweet[\"author_id\"]][\"username\"]}')\n",
-    "#     print(f'VERIFIED:                   {users[tweet[\"author_id\"]][\"verified\"]}')\n",
-    "#     print(f'BIO:                        {users[tweet[\"author_id\"]][\"description\"]}')\n",
-    "#     print(f'METRICS:                    {users[tweet[\"author_id\"]][\"public_metrics\"]}')\n",
-    "#     print(f\"TWEET ID:                   {tweet['id']}\") \n",
-    "#     print(f\"TEXT:                       {tweet['text']}\")\n",
-    "#     print(f\"CREATED AT:                 {tweet['created_at']}\")\n",
-    "#     print(f\"TWEET METRICS:              {tweet['public_metrics']}\")\n",
-    "#     context_annotations = tweet.get(\"context_annotations\",[])\n",
-    "#     print(f\"CONTEXT - DOMAIN:           {list(map(itemgetter('domain'), context_annotations))}\")\n",
-    "#     print(f\"CONTEXT - ENTITY:           {list(map(itemgetter('entity'), context_annotations))}\")\n",
-    "#     entities = tweet.get(\"entities\",[])\n",
-    "#     print(f\"ENTITIES:                   {entities}\\n\")\n",
-    "\n",
-    "\n",
-    "    # Create a dataframe\n",
-    "    # df = pd.DataFrame(tweets_dict['data'])\n",
-    "    # # save to csv\n",
-    "    # df.to_csv('tweets.csv', index=False)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Final note: I would not try to work with pandas dataframes to write your file. I would create an empty list, append the results from each new query to that list, and then write the final list of dictionary objects to a json file (see this question for details). I've learned the hard way that raw tweets and pandas dataframes don't really play nice. Much better to get used to how json objects and dictionaries work.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -585,13 +596,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#create a filter function which filters out anything that can classify as spam.\n",
-    "#DATA CLEANING\n",
-    "    - REMOVE 50 "
+    "---------------------------------------------------------------------------\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -613,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
