Re-arranged cells for cohesiveness.

--- a/Twitter_Tweepy_Data_Extraction.ipynb
+++ b/Twitter_Tweepy_Data_Extraction.ipynb
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "def filter_rule(chunk, hash_include=True):\n",
-    "    text_list    = '(#ad OR #sponsored OR #promoted OR #promotion) (Learn More) (Shop Now)'\n",
+    "    text_list       = '(#ad OR #sponsored OR #promoted OR #promotion OR \"Learn More\" OR \"Shop Now\")'\n",
     "    lang            = '(lang:en)'\n",
     "    rt              = '(-is:retweet) (-\"RT\")' \n",
     "    domain          =  chunk\n",
@@ -311,12 +311,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chunk in chunks:\n",
+    "        print(f'Chunk: {chunk}')\n",
+    "        # read CSV file\n",
+    "        results = pd.read_csv('dev_tweets.csv')\n",
+    "        # count no. of lines\n",
+    "        print(\"Number of lines pre-extraction:-\", \n",
+    "        len(results))\n",
+    "        query       = filter_rule(chunk=chunk)\n",
+    "        paginator   = get_tweets(query=query, max_results=100)\n",
+    "        for tweet in paginator:\n",
+    "        # Assemble all data in a list\n",
+    "                data = {\"author_id\": tweet.author_id,\n",
+    "                        \"created_at\":tweet.created_at,\n",
+    "                        \"tweet_id\": tweet.id,\n",
+    "                        \"text\": tweet.text}\n",
+    "                append_to_csv(data, fileName=\"dev_tweets.csv\")\n",
+    "\n",
+    "        time.sleep(16)\n",
+    "        results = pd.read_csv('dev_tweets.csv')\n",
+    "        # count no. of lines\n",
+    "        print(\"Number of lines post-extraction:-\", \n",
+    "        len(results))\n",
+    " \n",
+    "deduplicate(\"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data.csv\")\n",
+    "df.to_json(r'data.json',orient='records')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TEST CODE\n",
-    "---------------------------------------------------------------------------"
+    "### TEST CODE \n",
+    "-------------------------"
    ]
   },
   {
@@ -369,56 +411,6 @@
     "#     print(f\"CONTEXT - ENTITY:           {list(map(itemgetter('entity'), context_annotations))}\")\n",
     "#     entities = tweet.get(\"entities\",[])\n",
     "#     print(f\"ENTITIES:                   {entities}\\n\")\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "--------------------------------------------------------\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for chunk in chunks:\n",
-    "        print(f'Chunk: {chunk}')\n",
-    "        # read CSV file\n",
-    "        results = pd.read_csv('dev_tweets.csv')\n",
-    "        # count no. of lines\n",
-    "        print(\"Number of lines pre-extraction:-\", \n",
-    "        len(results))\n",
-    "        query       = filter_rule(chunk=chunk)\n",
-    "        paginator   = get_tweets(query=query, max_results=100)\n",
-    "        for tweet in paginator:\n",
-    "        # Assemble all data in a list\n",
-    "                data = {\"author_id\": tweet.author_id,\n",
-    "                        \"created_at\":tweet.created_at,\n",
-    "                        \"tweet_id\": tweet.id,\n",
-    "                        \"text\": tweet.text}\n",
-    "                append_to_csv(data, fileName=\"dev_tweets.csv\")\n",
-    "\n",
-    "        time.sleep(16)\n",
-    "        results = pd.read_csv('dev_tweets.csv')\n",
-    "        # count no. of lines\n",
-    "        print(\"Number of lines post-extraction:-\", \n",
-    "        len(results))\n",
-    " \n",
-    "deduplicate(\"test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data.csv\")\n",
-    "df.to_json(r'data.json',orient='records')"
    ]
   },
   {
