--- a/Twitter_NLP_Influencer_Detection.ipynb
+++ b/Twitter_NLP_Influencer_Detection.ipynb
@@ -105,38 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x22da7a02f80>"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop existing tables\n",
-    "c.execute('DROP TABLE IF EXISTS tweets')\n",
-    "c.execute('DROP TABLE IF EXISTS users')"
+    "# c.execute('DROP TABLE IF EXISTS tweets')\n",
+    "# c.execute('DROP TABLE IF EXISTS users')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x22da7a02f80>"
+       "<sqlite3.Cursor at 0x1e9c45e1f80>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x22da7a02f80>"
+       "<sqlite3.Cursor at 0x1e9c45e1f80>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +372,7 @@
     "for chunk in chunks_list:\n",
     "    print(f'Chunk: {chunk}')\n",
     "    \n",
-    "    query = filter_rule(chunk=chunk)\n",
+    "    query = filter_rule(chunk=chunk,hash_include=True)\n",
     "    paginator = get_tweets(query=query, max_results=100)\n",
     "\n",
     "    if paginator is None:\n",
@@ -413,15 +402,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(22524, 8)\n",
-      "Number of distinct tweet IDs: 11032\n"
+      "(21886, 8)\n",
+      "Number of distinct tweet IDs: 10722\n"
      ]
     }
    ],
@@ -436,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(11032, 8)\n"
+      "(10722, 8)\n"
      ]
     }
    ],
@@ -458,47 +447,6 @@
     "dedup_df = df.drop_duplicates(subset='tweet_id', keep='last', inplace=False).reset_index(drop=True, inplace=False)\n",
     "\n",
     "print(dedup_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "tweet_id                       int64\n",
-      "author_id                      int64\n",
-      "created_at       datetime64[ns, UTC]\n",
-      "text                          object\n",
-      "tweet_metrics                 object\n",
-      "entities                      object\n",
-      "context                       object\n",
-      "place_id                      object\n",
-      "dtype: object\n",
-      "tweet_id - INTEGER\n",
-      "author_id - INTEGER\n",
-      "created_at - TIMESTAMP\n",
-      "text - TEXT\n",
-      "tweet_metrics - JSON\n",
-      "entities - JSON\n",
-      "context - JSON\n",
-      "place_id - JSON\n"
-     ]
-    }
-   ],
-   "source": [
-    "print()\n",
-    "print(dedup_df.dtypes)\n",
-    "\n",
-    "c.execute(\"PRAGMA table_info(tweets)\")\n",
-    "columns = c.fetchall()\n",
-    "\n",
-    "for column in columns:\n",
-    "    print(column[1], \"-\", column[2])\n"
    ]
   },
   {
@@ -545,14 +493,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows in 'tweets' table: 11032\n"
+      "Number of rows in 'tweets' table: 13835\n"
      ]
     }
    ],
@@ -610,6 +558,13 @@
     "\n",
     "    time.sleep(16)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
